--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,9 +21,15 @@ jobs:
       with:
         java-version: 1.8
         
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2        
     - name: Test1
-      run: mvn test -Dgropus=test1
+      run: mvn test -Dgropus="test1"
     - name: Test1
-      run: mvn test -Dgropus=test2
+      run: mvn test -Dgropus="test2"
     - name: Build with Maven
       run: mvn -B package --file pom.xml
