--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test2
       run: mvn test -Dgroups="test2"
     - name: Build with Maven
-      run: mvn -B package --file pom.xml && kdir staging && cp target/*.jar staging
+      run: mvn -B package --file pom.xml && mkdir staging && cp target/*.jar staging
     - uses: actions/upload-artifact@v2
       with:
         name: Package
