--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,6 +10,26 @@ on:
     branches: [ master ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Run first test
+        run: mvn test -Dgroups="test1"
+      - name: Run second test
+        run: mvn test -Dgroups="test2"
+
   build:
 
     runs-on: ubuntu-latest
@@ -26,14 +46,10 @@ jobs:
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2        
-    - name: Test1
-      run: mvn test -Dgroups="test1"
-    - name: Test2
-      run: mvn test -Dgroups="test2"
+        restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: mvn -B package --file pom.xml && mkdir staging && cp target/*.jar staging
+      run: mvn -B package -DskipTests --file pom.xml && mkdir staging && cp target/*.jar staging
     - uses: actions/upload-artifact@v2
       with:
-        name: Package
+        name: example
         path: staging
