--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
             <type>maven-plugin</type>
         </dependency>
     </dependencies>
+        
+    <distributionManagement>
+      <repository>
+        <id>github</id>
+        <name>GitHub Packages</name>
+        <url>https://maven.pkg.github.com/Sup456/Java-CI</url>
+      </repository>
+    </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
