--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.example</groupId>
     <artifactId>DeployProject</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>Java-CI</name>
     <packaging>jar</packaging>
 
     <build>
