--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     <distributionManagement>
 	   <repository>
 	     <id>github</id>
-	     <name>GitHub MRtecno98 Apache Maven Packages</name>
+	     <name>GitHub Apache Maven Packages</name>
 	     <url>https://maven.pkg.github.com/Sup-456/Java-CI</url>
 	   </repository>
 	</distributionManagement>
