--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>DeployProject</artifactId>
+    <artifactId>Java-CI</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Java-CI</name>
     <packaging>jar</packaging>
