--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  publish:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -34,8 +34,12 @@ jobs:
       with:
         name: example
         path: staging
+    - uses: actions/checkout@v2
+              - uses: actions/setup-java@v1
+              with:
+                java-version: 1.8
+                - name: Publish package
+                  run: mvn -e -B deploy
+                  env:
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish package
-        run: mvn -e -B deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
