--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,16 +30,8 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml && mkdir staging && cp target/*.jar staging
-    - uses: actions/upload-artifact@v2
-      with:
-        name: example
-        path: staging
-    - uses: actions/checkout@v2
-              - uses: actions/setup-java@v1
-              with:
-                java-version: 1.8
-                - name: Publish package
-                  run: mvn -e -B deploy
-                  env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Publish package
+      run: mvn -B deploy
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
