--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>Java-CI</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <name>Java-CI</name>
+    <groupId>example</groupId>
+    <artifactId>java-ci</artifactId>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <build>
@@ -48,14 +47,14 @@
             <type>maven-plugin</type>
         </dependency>
     </dependencies>
-        
+
     <distributionManagement>
-	   <repository>
-	     <id>github</id>
-	     <name>GitHub Apache Maven Packages</name>
-	     <url>https://maven.pkg.github.com/Sup-456/Java-CI</url>
-	   </repository>
-	</distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/sup456/Java-CI</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
